# practice-01-descriptive-statistics-knifenoodle

./: main.py  practice_01_assignment.ipynb  practice_01_assignment_wonwoo.ipynb  practice_02_assignment.ipynb  practice_02_assignment_wonwoo.ipynb  practice_03_assignment.ipynb  practice_03_assignment_wonwoo.ipynb  practice_04_assignment_wonwoo.ipynb  practice_05_assignment_wonwoo.ipynb  practice_comprehensive_wonwoo.ipynb  pyproject.toml
